--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-endpoints.flyway.web.enabled=true
+#endpoints.flyway.web.enabled=true
 
 # Database connection
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/rtsd
+spring.datasource.url=jdbc:postgresql://localhost:5432/ccsn
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialize=true
+
 # Flyway
-flyway.locations=classpath:db/migration
+#flyway.locations=classpath:db/migration
 
 #MyBatis
-mybatis.mapperLocations=classpath*:**/mapper/*.xml
+#mybatis.mapperLocations=classpath*:**/mapper/*.xml
