--- a/pom.xml
+++ b/pom.xml
@@ -25,18 +25,18 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.security.oauth</groupId>
-			<artifactId>spring-security-oauth2</artifactId>
-			<version>2.2.1.RELEASE</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>1.5.10.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -44,11 +44,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 
 		<!-- Flywaydb -->
 		<dependency>
@@ -58,10 +58,10 @@
 		</dependency>
 
 		<!-- JDBC -->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
-		</dependency>
+		</dependency>-->
 
 		<!-- PostgreSQL -->
 		<dependency>
@@ -71,7 +71,7 @@
 		</dependency>
 
 		<!-- MyBatis -->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.2.1</version>
@@ -80,17 +80,18 @@
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter-test</artifactId>
 			<version>1.3.1</version>
-		</dependency>
+		</dependency>-->
 	</dependencies>
 
 	<build>
 		<plugins>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+			</plugin>-->
 
-			<plugin> <!-- command to run migrations:  mvn flyway:migrate -->
+			<!-- command to run migrations:  mvn flyway:migrate -->
+			<plugin>
 				<groupId>org.flywaydb</groupId>
 				<version>4.2.0</version>
 				<artifactId>flyway-maven-plugin</artifactId>
@@ -103,7 +104,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<url>jdbc:postgresql://localhost:5432/rtsd</url>
+					<url>jdbc:postgresql://localhost:5432/ccsn</url>
 					<user>postgres</user>
 					<password>postgres</password>
 					<locations>
