--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<url>jdbc:postgresql://localhost:5432/ccsn</url>
+					<url>jdbc:postgresql://localhost:5432/ccsn_api</url>
 					<user>postgres</user>
 					<password>postgres</password>
 					<locations>
