--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,16 @@
 
 # Database connection
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ccsn
+spring.datasource.url=jdbc:postgresql://localhost:5432/ccsn_api
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.initialize=true
 
 # Flyway
-#flyway.locations=classpath:db/migration
+flyway.locations=classpath:db/migration
 
 #MyBatis
 #mybatis.mapperLocations=classpath*:**/mapper/*.xml
